syntax = "proto3";

package user;
option go_package = "./userservice";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc GreetUser(GreetUserRequest) returns (GreetUserResponse);
}

message CreateUserRequest {
    string email = 1;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string email = 1;
    string name = 2;
    string avatarURL = 3;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string email = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message GreetUserRequest {
    string email = 1;
}

message GreetUserResponse {
    string message = 1;
}

message User {
    int32 id = 1;
    string email = 2;
    string name = 3;
    string avatarURL = 4;
    int32 greetCount = 5;
}
